--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -40,7 +40,7 @@ img {
 }
 
 .mentormate h3 {
-	color: #4E4D4D;
+	color: #000000;
     font-family: 'Shift', monospace;
 	font-size: 25px;
 	font-weight: bold;
@@ -75,7 +75,7 @@ img {
 }
 
 .nerdery p {
-	color: #4E4D4D;
+	color: #000000;
     font-family: 'Shift', monospace;
 	font-size: 18px;
 	font-weight: bold;
@@ -94,7 +94,7 @@ img {
 }
 
 .ifco h3 {
-	color: #4E4D4D;
+	color: #000000;
     font-family: 'Shift', monospace;
 	font-size: 25px;
 	font-weight: bold;
@@ -121,7 +121,7 @@ img {
 }
 
 .other h3 {
-	color: #4E4D4D;
+	color: #000000;
     font-family: 'Shift', monospace;
 	font-size: 25px;
 	font-weight: bold;
